# DHMT

./: .gitignore  CMakeLists.txt  README.md
assets/textures/: .gitkeep
include/: app_render_utils.h  asset_path.h  crane.h  geometry.h  texture.h
src/: asset_path.cpp  crane.cpp  geometry.cpp  main.cpp  texture.cpp
tools/: generate_textures.ps1
